2009-12-08  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/make/linux/platform_zero.in: New file.

2009-12-08  Gary Benson  <gbenson@redhat.com>

	* Makefile.am
	(stamps/ports.stamp): Updated paths, and don't make jvm.cfg or
	ergo_$arch.c for Zero.

2009-12-03  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-bytecodeInterpreter.patch: Removed.

2009-12-03  Gary Benson  <gbenson@redhat.com>

	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/:
	Removed.

2009-12-02  Pavel Tisnovsky  <ptisnovs@redhat.com>

	Synchronise Gervill sources stored in IcedTea overlay with OpenJDK sources
	6833357: Improve time-stamp support in Gervill to reduce jitter.
	6823449: Gervill: ArrayIndexOutOfBoundsException thrown when trying to
	6806019: 38 JCK api/javax_sound/midi/ tests fails starting from jdk7 b46
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/CHANGES.txt,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftAudioBuffer.java,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftChannel.java,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftLimiter.java,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftMainMixer.java,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftReceiver.java,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftSynthesizer.java,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftVoice.java:
	Synchronised with upstream.

2009-11-27  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedtea/java/sun/applet/PluginAppletViewer.java
	(getWindow): Fortify condition for	wait for panel initialization.
	(parse): Handle nested objected tags, don't allow parameter value
	overwrite.
	* netx/net/sourceforge/jnlp/Launcher.java
	(createApplet): Set context classloader for the thread to the applet's
	classloader, so that getContextClassLoader calls succeed.

2009-11-23  Gary Benson  <gbenson@redhat.com>
